--- a/usr/src/tools/Makefile
+++ b/usr/src/tools/Makefile
@@ -19,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -45,6 +45,7 @@ COMMON_SUBDIRS= \
 	pmodes \
 	gk \
 	install.bin \
+	lintdump \
 	protocmp \
 	protolist \
 	scripts
@@ -67,6 +68,7 @@ LINTSUBDIRS= \
 	ctf \
 	cw \
 	findunref \
+	lintdump \
 	protocmp \
 	protolist
 
